# src/CategoryController.ts
@@ -1,13 +1,14 @@
 import { Body, Controller, Delete, Patch, Path, Post, Route } from "tsoa";
 import * as categoryLib from "../lib/category";
 import { Prisma as PrismaSchema } from "@prisma/client";
+import { TCreateCategory } from "../interfaces";
 
 @Route("category")
 export class CategoryController extends Controller {
 
     @Post("create")
     public async createCategory(
-        @Body() body: PrismaSchema.CategoryCreateArgs["data"]) {
+        @Body() body: TCreateCategory) {
         try {
             const newCategory = await categoryLib.createCategory(body);
             console.log(({ ok: true, id: newCategory }));
@@ -19,7 +20,7 @@ export class CategoryController extends Controller {
     @Patch("edit/{userId}")
     public async editGift(
         @Path() userId: string,
-        @Body() body: PrismaSchema.CategoryCreateArgs["data"],
+        @Body() body: TCreateCategory,
     ){
         try {
             if (!body && !userId) throw new Error('no patch provided')
